1999-08-16  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (do_ldst): Look for register conflicts on stores
	as well as loads.

1999-08-13  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (validate_offset_imm): Work on unsigned values.
	(md_apply_fix3): Always pass positive values to
	validate_offset_imm.

1999-08-12  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (skip_whitespace): New macro.
	Formatting tidy ups.
	
	(md_apply_fix3): Store relocation offset in addend for ELF based
	relocs.
	(arm_force_relocation): Always generate relocs for Thumb function
	calls. 
	
1999-08-11  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* config/tc-i386.c (md_assemble): Remove dead code.  intel_syntax
	LONG_DOUBLE_MNEM_SUFFIX floating point is done in opcode/i386.h

Tue Aug 10 12:58:31 1999  Jeffrey A Law  (law@cygnus.com)

	* config/tc-hppa.c (pa_build_unwind_subspace): Use sane section
	flags for the unwind subspace.

	* config/tc-hppa.c (UNWIND_SECTION_NAME): Define for ELF.
	(pa_build_unwind_subspace): Remove #if 0 wrapper.  Select a
	suitable relocation based on the size of the target's pointer.
	Always Use subsegment zero for the unwinders.
	(pa_level): Handle "2.0w".

Mon Aug  9 20:02:22 1998  J"orn Rennecke  <amylaar@cygnus.co.uk>

	* config/tc-d30v.c (write_2_short): Don't group repeat instructions
	with the following instruction unless this was specified.

1999-08-09  Ian Lance Taylor  <ian@zembu.com>

	* config/tc-i386.h (SUB_SEGMENT_ALIGN): If TE_GO32, return 4 for
	certain sections, to match BFD changes.

1999-08-08  Mumit Khan  <khan@xraylith.wisc.edu>

	* Makefile.am (noinst_SCRIPTS): Change .gdbinit to $(GDBINIT).
	(EXTRA_SCRIPTS): Define to keep automake happy.
	* Makefile.in: Rebuild.

1999-08-08  Ian Lance Taylor  <ian@zembu.com>

	* Makefile.am: Rename .dep* files to DEP*.
	(MKDEP): Rename from DEP.  Change all uses.  Use $${srcdir} rather
	than $(srcdir).  Rename TCDEP targets to DEPTC.  Rename OBJDEP
	targets to DEPOBJ.